[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["wkrati"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
